--- a/notuber/index.html
+++ b/notuber/index.html
@@ -57,13 +57,15 @@
 
     function loadOthers() {
         request = new XMLHttpRequest();
-        request.open("POST", "https://defense-in-derpth.herokuapp.com/submit", true);
+        request.open("POST", "http://black-car-lab.herokuapp.com/submit", true);
         request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 
         request.onreadystatechange = function() {
             if (request.readyState == 4 && request.status == 200){
                 var response = request.responseText;
                 var responseObject = JSON.parse(response);
+
+                console.log(request.responseText);
 
                 var category = "passengers";
                 if (responseObject.passengers !== undefined){
@@ -107,8 +109,9 @@
                     var distance = google.maps.geometry.spherical.computeDistanceBetween(me, this.position)
                                     * 0.000621371;
                     distance = Math.round(distance * 1000) / 1000;
-                
-                    content += ' <br>Distance: ' + distance + ' Miles';
+                    if (this.title != "Here I Am!"){
+                        content += ' <br>Distance: ' + distance + ' Miles';
+                    }
                 }
                 infowindow.setContent(content);
                 infowindow.open(map, this);
