added an index to display work

--- a/notuber/index.html
+++ b/notuber/index.html
@@ -57,7 +57,7 @@
 
     function loadOthers() {
         request = new XMLHttpRequest();
-        request.open("POST", "http://black-car-lab.herokuapp.com/submit", true);
+        request.open("POST", "http://defense-in-derpth.herokuapp.com/submit", true);
         request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 
         request.onreadystatechange = function() {
